# abnf-to-regexp

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.rst  LICENSE  README.md  README.rst  check_help_in_readme.py  check_init_and_setup_coincide.py  mypy.ini  precommit.py  pylint.rc  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check-on-pull-request.yml  check-on-push-to-main.yml  ci.yml  publish-to-pypi.yml
abnf_to_regexp/: __init__.py  __main__.py  abnf_transformation.py  base.py  compression.py  main.py  nested_python.py  representation.py  single_regexp.py
continuous_integration/: check_help_in_readme.py  check_version_consistent.py  precommit.py
dev_scripts/: __init__.py  list_all_letter_ranges.py
test_data/nested-python/bcp47/: expected.py  grammar.abnf
test_data/nested-python/grammar_with_cycles/: expected.err  grammar.abnf
test_data/nested-python/internet_media_type/: expected.py  grammar.abnf
test_data/nested-python/rfc2396/: expected.py  grammar.abnf
test_data/nested-python/rfc2732/: expected.py  grammar.abnf
test_data/nested-python/rfc3339/: expected.py  grammar.abnf
test_data/nested-python/rfc3986/: expected.py  grammar.abnf
test_data/nested-python/rfc3987/: expected.py
test_data/nested-python/rfc8089/: expected.py  grammar.abnf
test_data/single-regexp/rfc3987/: counter_example_01.txt  counter_example_02.txt  example_03.txt  expected.out
test_data/single-regexp/rfc8141/: counter_example_01.txt  counter_example_02.txt  counter_example_03.txt  example_01.txt  example_02.txt  example_03.txt  expected.out  grammar.abnf
tests/: test_abnf_transformation.py  test_main.py  test_representation.py
tests/data/nested-python/rfc3987/: expected.py
tests/data/rfc3987/: example_01.txt  example_02.txt  expected.out  grammar.abnf
tests/data/single-regexp/rfc3987/: expected.out
